After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764999 - multiqueue: catch errors and flushing after locking
multiqueue: catch errors and flushing after locking
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-13 15:16 UTC by Vincent Penquerc'h
Modified: 2016-04-14 08:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
multiqueue: catch errors and flushing after locking (1.05 KB, patch)
2016-04-13 15:16 UTC, Vincent Penquerc'h
none Details | Review
multiqueue: catch errors and flushing after locking (1.18 KB, patch)
2016-04-13 16:14 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2016-04-13 15:16:28 UTC
Created attachment 325871 [details] [review]
multiqueue: catch errors and flushing after locking

This ensures we don't hang waiting in the following cond wait.
Comment 1 Sebastian Dröge (slomo) 2016-04-13 15:51:39 UTC
Comment on attachment 325871 [details] [review]
multiqueue: catch errors and flushing after locking

Seems to make sense but please a more complete commit message. When did you run into this, when exactly can it happen and what would be the symptoms.
Comment 2 Vincent Penquerc'h 2016-04-13 16:03:14 UTC
I did not actually run into a problem with this, it's just something I saw would preemptively armor the code while debugging something else.
Comment 3 Vincent Penquerc'h 2016-04-13 16:14:00 UTC
Created attachment 325874 [details] [review]
multiqueue: catch errors and flushing after locking

With a bit more verbosity.
Comment 4 Vincent Penquerc'h 2016-04-14 08:48:41 UTC
commit 53a7a991e2071ba76319351db43f795940cdcbe5
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Wed Apr 13 16:08:30 2016 +0100

    multiqueue: catch errors and flushing case after lock
    
    This ensures we can not get into an indefinite wait on the
    following cond var wait.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=764999